guestbook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "guestbook.qubling.com"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - guestbook.qubling.com
      secretName: guestbook-qubling-com-tls
  rules:
    - host: guestbook.qubling.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook
                port:
                  number: 80
